<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/gnomo_boton"
            android:layout_width="191dp"
            android:layout_height="189dp" android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/text_main_header"
            android:layout_marginTop="56dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="34sp"
            app:backgroundTint="@color/red" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/text_main_header"
            android:layout_width="316dp"
            android:layout_height="88dp" android:id="@+id/text_main_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:textSize="34sp" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edit_text_number"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
            app:layout_constraintStart_toEndOf="@+id/text_gnome_number" android:layout_marginTop="12dp"
            android:layout_marginStart="44dp" android:hint="@string/text_gnome_number"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/text_gnome_number"
            android:layout_width="95dp"
            android:layout_height="53dp" android:id="@+id/text_gnome_number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/text_gnome_id"
            android:layout_marginTop="12dp" android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/text_gnome_id" android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginTop="40dp"
            android:id="@+id/edit_text_id" android:hint="@string/gnome_id_value"/>
    <TextView
            android:text="@string/text_gnome_id"
            android:layout_width="93dp"
            android:layout_height="45dp" android:id="@+id/text_gnome_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginTop="40dp" android:textSize="20sp"/>
    <RadioGroup
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_number"
            android:id="@+id/radio_group_color" android:baselineAligned="false"
            android:checkedButton="@id/purple_color" android:layoutDirection="inherit">
        <RadioButton
                android:text="Purple"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/purple_color" android:textColorLink="#B173BF"/>

        <RadioButton
                android:text="Red"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/red_color" android:textColorLink="#FF495C"/>
        <RadioButton
                android:text="Green"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/green_color" android:textColorLink="#61B16B"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>